Remove opaque capability fingerprints (#38869)
Remove opaque fingerprint metadata from MCP capability and runtime payloads.
Delete unused descriptor catalog hash helpers and stop LLM E2E artifacts from
recording capability fingerprints.

Update MCP unit tests, E2E contract baselines, production runtime assertions.